--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>Do You Love me?</h1>
+        <h1>Do You Love Me?</h1>
     </header>
+    
+    <div class="gif-container">
+        <img src="C:/Users/harsh/Documents/Programming/VSC Projects/DoYouLoveMe/images/Staretra.jpg" alt="double charge">
+    </div>
 </body>
 </html>
