--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     
     <div class="gif-container">
-        <img src="C:/Users/harsh/Documents/Programming/VSC Projects/DoYouLoveMe/images/Staretra.jpg" alt="double charge">
+        <img src="images/Staretra.jpg" alt="double charge">
     </div>
 </body>
 </html>
