New Style/Proper Images added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     
     <div class="gif-container">
-        <img src="images/Staretra.jpg" alt="double charge">
+        <img src="images/Love.gif" alt="double charge">
     </div>
 </body>
 </html>
