--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
         <h1>Do You Love Me?</h1>
     </header>
     
-    <div class="gif-container">
-        <img src="images/Love.gif" alt="double charge">
+    <div class="button-container">
+        <a href="#" class="yes-button">Yes</a>
+        <div class="gif-container">
+            <img src="images/Love.gif" alt="double charge">
+        </div>
+        <button class="no-button">No</button>
     </div>
 </body>
 </html>
