--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Do You Love Me?</title>
-    <link rel="stylesheet" href="main.css">
-    <script defer src="main.js"></script>
+    <link rel="stylesheet" href="CSS/main.css">
+    <script defer src="JavaScript/main.js"></script>
 </head>
 <body>
     <header>
