--- a/success.html
+++ b/success.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>You do love me!</title>
-    <link rel="stylesheet" href="success.css"> <!-- You can create a new CSS file for styles if needed -->
+    <link rel="stylesheet" href="CSS/success.css">
 </head>
 <body>
     <header>
